Commit 15042021 - Update Comment Types ver1.0

--- a/CommentGenerator/CommentGenerator.csproj
+++ b/CommentGenerator/CommentGenerator.csproj
@@ -94,5 +94,14 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectLibs\ProjectLibs.csproj">
+      <Project>{64b3b8c1-b2ef-4847-8025-1aa0fd9051d4}</Project>
+      <Name>ProjectLibs</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
